<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView"


        android:layout_width="162dp"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:text="@string/nazovregistracia"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="69dp" />

    <EditText
        android:id="@+id/heslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/noveheslo"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/hesloznova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heslo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/novehesloznova"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registraciaButton"

        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:onClick="Registration"
        android:text="@string/registraciaButton" />


</RelativeLayout>
</ScrollView>